Added ApiController, ScheduleView and modify PlayersView

--- a/EURO2020/Views/Home/Index.cshtml
+++ b/EURO2020/Views/Home/Index.cshtml
@@ -6,12 +6,50 @@
     <h1>WELCOME TO EURO2020</h1>
     <p class="lead">EURO 2020: All you need to know about the tournament</p>
 </div>
+
 <div>
     <h2>About Tournament</h2>
     <p>
-        The 2020 UEFA European Football Championship, commonly referred to as UEFA Euro 2020, or simply Euro 2020, is the 16th UEFA European Championship, the quadrennial international men's football championship of Europe organised by the Union of European Football Associations (UEFA).
-        The tournament, being held in 11 cities in 11 UEFA countries, was originally scheduled from 12 June to 12 July 2020, but was postponed due to the COVID-19 pandemic in Europe and rescheduled for 11 June to 11 July 2021. It retains the name "UEFA Euro 2020". Portugal are the defending champions, having won the 2016 competition in France, and the video assistant referee (VAR) system makes its debut at the European Championship in this tournament
-        UEFA President Michel Platini said in 2012 that the tournament was to be hosted in several nations as a "romantic" one-off event to celebrate the 60th "birthday" of the European Championship competition. Having the largest capacity of any of the stadiums entered for the competition, Wembley Stadium in London is scheduled to host the semi-finals and final for the second time, having done so before at the 1996 tournament in the stadium's former incarnation.
-        The Stadio Olimpico in Rome was chosen to host the opening game, involving Turkey and hosts Italy. Originally to be played at 13 venues, two hosts were later removed: Brussels in December 2017 due to the abandonment of building the Eurostadium, and Dublin in April 2021 as there was no guarantee that spectators could attend. Spain also changed their host city from Bilbao to Seville to allow an audience at matches.
+        <b>What are the key dates?</b>
+    <p>The final tournament dates are 11 June to 11 July 2021.</p></br>
+
+    <b>How does the group stage look?</b>
+    <p>
+        Group A: Turkey, Italy, Wales, Switzerland<br />
+
+        Group B: Denmark, Finland, Belgium, Russia<br />
+
+        Group C: Netherlands, Ukraine, Austria, North Macedonia<br />
+
+        Group D: England, Croatia, Scotland, Czech Republic<br />
+
+        Group E: Spain, Sweden, Poland, Slovakia<br />
+
+        Group F: Hungary, Portugal, France, Germany.<br />
+    </p>
+
+    <b>Who are the hosts?</b>
+    <p>UEFA EURO 2020 is being held across the continent for the first time in the competition's 60-year history, with 11 host cities in all.</p></br>
+
+    <b>Final and semi-finals, two round of 16 games, three group games</b>
+    <p>London, England: Wembley Stadium</p></br>
+
+    <b>Six group games, one quarter-final</b>
+    <p> Saint Petersburg, Russia: Saint Petersburg Stadium</p></br>
+
+    <b>Three group games, one quarter-final</b>
+    <p>
+        Baku, Azerbaijan: Baku Olympic Stadium<br />
+        Munich, Germany: Football Arena Munich<br />
+        Rome, Italy: Olimpico in Rome<br />
+    </p></br>
+
+    <b>What is the tournament format?</b>
+    <p>
+        The format will be the same as for UEFA EURO 2016. The top two in each of the six final tournament groups will proceed to the round of 16 along with the four best third-placed finishers.</p></br>
+
+    <b>Who is the mascot?</b>
+    <p> Skillzy, a larger-than-life character inspired by freestyling, street and panna culture.</p></br>
+
     </p>
 </div>
