--- a/EURO2020/Views/Players/Details.cshtml
+++ b/EURO2020/Views/Players/Details.cshtml
@@ -12,9 +12,10 @@
     <dl class="dl-horizontal">
 
         <dt>
-            <img style="width:140px;height:134px;position:absolute;margin-left:-207px;margin-top:-19px" src="@Model.ImgURL" />
+            <img style="width:140px;height:134px;position:absolute;margin-left:-159px;margin-top:-19px" src="@Model.ImgURL" />
 
         </dt>
+        <div style="margin-left:75px">
         <dt>
             @Html.DisplayNameFor(model => model.Number)
         </dt>
@@ -53,6 +54,7 @@
         <dd>
             @Html.DisplayFor(model => model.Goals)
         </dd>
+        </div>
 
     </dl>
 </div>
