--- a/EURO2020/Views/Shared/_Layout.cshtml
+++ b/EURO2020/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Teams", "Index", "Teams")</li>
                     <li>@Html.ActionLink("Goals", "Index", "Players")</li>
+                    <li>@Html.ActionLink("Schedule", "Schedule", "Home")</li>
 
                 </ul>
                 @Html.Partial("_LoginPartial")
