--- a/EURO2020/Views/Teams/Index.cshtml
+++ b/EURO2020/Views/Teams/Index.cshtml
@@ -44,10 +44,7 @@
                     }
 
                     @Html.ActionLink("Details", "Details", new { id = item.id }, new { @class = "form-control" })
-                    @if (User.IsInRole("Administrator"))
-                    {
-                        <button data-team-id="@item.id" class="form-control js-delete">Delete</button>
-                    }
+                   
                 </td>
             </tr>
         }
@@ -56,25 +53,8 @@
 
 @section scripts{
     <script>
-        $(document).ready(function () {
-            var table = $("#teamsTable").DataTable();
-            $("#teamsTable .js-delete").on("click", function () {
-                var button = $(this);
-                bootbox.confirm("Do you want to delete this team?", function (result) {
-                    if (result) {
-                        $.ajax({
-                            url: "/api/Teams1/" + button.attr("data-team-id"),
-                            method: "DELETE",
-                            success: function () {
-                                table.row(button.parents("tr")).remove().draw();
-                            },
-                            error: function (err) {
-                                console.log(err);
-                            }
-                        });
-                    }
-                });
-            });
+            $(document).ready(function () {
+                $("#teamsTable").DataTable();
         });
     </script>
-    }
+ }
